--- a/Duffy/DFPhotoSectionHeader.xib
+++ b/Duffy/DFPhotoSectionHeader.xib
@@ -14,6 +14,7 @@
                     <rect key="frame" x="8" y="6" width="292" height="21"/>
                     <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                    <color key="textColor" red="0.27857506793478259" green="0.27857506793478259" blue="0.27857506793478259" alpha="1" colorSpace="calibratedRGB"/>
                     <nil key="highlightedColor"/>
                 </label>
             </subviews>
