--- a/peanut/photos/templates/photos/neighbors.html
+++ b/peanut/photos/templates/photos/neighbors.html
@@ -64,23 +64,39 @@
 		console.log("Sending request to " + url)
 		$.get(url, function( data ) {
 			$.each( data.neighbors, function( i, cluster ) {
-				row = ""
-				city = ""
-				date = ""
+				row = "";
+				city = "";
+				date = "";
+				users = [];
 				$.each(cluster, function( i, photo) {
+					users.push(photo.user);
 					thumbUrl = "/user_data/" + photo.user + "/" + photo.thumb_filename
 					img = "<img height='78px' width='78px' src='" + thumbUrl + "' alt='" + photo.user + "'/>"
-					html = "<div class='ui-imageblock'><div class='ui-image' title='" + photo.user + "'>" + img + "</div><div class='ui-userid'>" + photo.user + "</div></div>";
+					html = "<div class='ui-imageblock'><div class='ui-image' title='" + photo.user + "'>" + img + "</div></div>";
 
 					row += html
 					city = photo.location_city
 					d = new Date(photo.time_taken * 1000); // TODO: Need to change this to format Mar 27, 2014
 					time = d.toLocaleDateString("en-US")
 				});
-				$("<div class='ui-section'><div class='ui-section-header'><div class='ui-sec-head-lhs'><div class='ui-sec-head-title'>"+ city + "</div><div class='ui-sec-head-names'>[Insert names of people in group. ex: Henry, Derek]</div></div><div class='ui-sec-head-rhs'>" + time + "</div></div>" + row + "</div>").appendTo( "#images" );
-		
+
+				$("<div class='ui-section'><div class='ui-section-header'><div class='ui-sec-head-lhs'><div class='ui-sec-head-title'>"+ city + "</div><div class='ui-sec-head-names'> People: " + uniqueUser(users) + "</div></div><div class='ui-sec-head-rhs'>" + time + "</div></div>" + row + "</div>").appendTo( "#images" );
 			});
 		});
+
+		// Takes list of user ids from photos and gives back a unique list
+		function uniqueUser(array){
+			var flags = [], output = [], l = array.length, i;
+			for( i=0; i<l; i++) {
+   				if( flags[array[i]]) {
+   					continue;
+   				}
+
+    			flags[array[i]] = true;
+    			output.push(array[i]);
+			}
+			return output.join(', ');
+		}
 	</script>
 </head>
 
