--- a/Duffy/DFPhotoViewController.xib
+++ b/Duffy/DFPhotoViewController.xib
@@ -6,8 +6,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="DFPhotoViewController">
             <connections>
-                <outlet property="imageView" destination="Q2R-Js-2yh" id="7X4-1O-BDA"/>
-                <outlet property="scrollView" destination="fcU-uf-SRU" id="ham-JG-hyA"/>
+                <outlet property="photoView" destination="qLd-yU-pjU" id="rYp-6S-C2q"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -16,26 +15,20 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" maximumZoomScale="10" translatesAutoresizingMaskIntoConstraints="NO" id="fcU-uf-SRU">
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qLd-yU-pjU" customClass="DFPhotoView">
                     <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
-                    <subviews>
-                        <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Q2R-Js-2yh" customClass="DFImageView">
-                            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
-                            <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                            <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                            <gestureRecognizers/>
-                        </imageView>
-                    </subviews>
-                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                    <gestureRecognizers/>
-                    <connections>
-                        <outlet property="delegate" destination="-1" id="qeM-4e-fMm"/>
-                    </connections>
-                </scrollView>
+                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                    <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                </view>
             </subviews>
             <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
+            <constraints>
+                <constraint firstItem="qLd-yU-pjU" firstAttribute="top" secondItem="i5M-Pr-FkT" secondAttribute="top" id="F6g-Q3-GTr"/>
+                <constraint firstAttribute="trailing" secondItem="qLd-yU-pjU" secondAttribute="trailing" id="Xzb-f7-jlr"/>
+                <constraint firstAttribute="bottom" secondItem="qLd-yU-pjU" secondAttribute="bottom" id="Zyn-zm-ZuY"/>
+                <constraint firstItem="qLd-yU-pjU" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" id="rYv-hr-8h8"/>
+            </constraints>
             <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
             <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
             <simulatedToolbarMetrics key="simulatedBottomBarMetrics" barStyle="black"/>
