Add an activity indicator when a query is in flight

--- a/Duffy/DFSearchBar.xib
+++ b/Duffy/DFSearchBar.xib
@@ -56,6 +56,10 @@
                         <action selector="cancelButtonClicked:" destination="iN0-l3-epB" eventType="touchUpInside" id="uAw-nl-3AL"/>
                     </connections>
                 </button>
+                <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" fixedFrame="YES" hidesWhenStopped="YES" style="gray" translatesAutoresizingMaskIntoConstraints="NO" id="FyO-bs-7gR">
+                    <rect key="frame" x="0.0" y="22" width="20" height="20"/>
+                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                </activityIndicatorView>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
             <gestureRecognizers/>
@@ -72,8 +76,10 @@
                 <constraint firstAttribute="centerY" secondItem="xPT-ud-47f" secondAttribute="centerY" id="yat-VX-CBX"/>
             </constraints>
             <connections>
+                <outlet property="activityIndicator" destination="FyO-bs-7gR" id="UEy-QT-DdW"/>
                 <outlet property="cancelButton" destination="NNO-gn-7DZ" id="A8I-HT-YGd"/>
                 <outlet property="clearButton" destination="4Cf-oq-Jsq" id="rIV-Y3-E86"/>
+                <outlet property="leftImageView" destination="xPT-ud-47f" id="ek4-7S-tUN"/>
                 <outlet property="textField" destination="0FW-ga-xjZ" id="Sy1-HA-r8g"/>
                 <outletCollection property="gestureRecognizers" destination="Sg2-M2-G8V" appends="YES" id="iiS-1f-pJb"/>
             </connections>
