--- a/peanut/photos/templates/admin/userbaseSummary.html
+++ b/peanut/photos/templates/admin/userbaseSummary.html
@@ -1,6 +1,7 @@
 <html>
 <head>
 <meta http-equiv="refresh" content="10">
+	<title>Duffy Summary</title> 
 </head>
 <style>
 	html, body { padding: 0; margin: 0; font-family: arial; font-size: 12px;}
