--- a/peanut/photos/templates/photos/search.html
+++ b/peanut/photos/templates/photos/search.html
@@ -29,8 +29,8 @@
 		float:left;
 		position: relative;
 		cursor: pointer;
-		height: {{ imageSize|add:+2 }}px;
-		width: {{ imageSize }}px;
+		height: 80px;
+		width: 78px;
 	}
 	.ui-i-c {
 		position:absolute;
@@ -93,8 +93,6 @@
 		border-top: 1px solid rgb(239, 239, 239);
 		font-size: 10px;
 		text-align: left;
-	}
-	#stats{
 	}
 	a:link{
 		text-decoration: none;
