--- a/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
+++ b/strand/iOS/Strand/Strand/DFCameraOverlayView.xib
@@ -1,8 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="6154.17" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="5056" systemVersion="13D65" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES">
     <dependencies>
-        <deployment defaultVersion="1792" identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6153.11"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3733"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
@@ -11,25 +10,56 @@
             <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FDr-hg-nDc">
-                    <rect key="frame" x="122" y="498" width="77" height="30"/>
-                    <state key="normal" title="Take Photo">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
-                <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="TS3-fi-Ux7">
-                    <rect key="frame" x="133" y="20" width="54" height="30"/>
-                    <state key="normal" title="Dismiss">
-                        <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                    </state>
-                </button>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="80R-J1-Wxm" userLabel="Background">
+                    <rect key="frame" x="0.0" y="426" width="320" height="142"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="FDr-hg-nDc" userLabel="Shutter Button">
+                            <rect key="frame" x="123" y="34" width="75" height="75"/>
+                            <constraints>
+                                <constraint firstAttribute="width" constant="75" id="SLW-bJ-fte"/>
+                                <constraint firstAttribute="height" constant="75" id="jSc-iH-Mco"/>
+                            </constraints>
+                            <state key="normal" image="Assets/Icons/CameraButton.png">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="c4Q-fB-mQc" userLabel="Gallery Button">
+                            <rect key="frame" x="20" y="46" width="50" height="50"/>
+                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="50" id="2dW-bl-1yn"/>
+                                <constraint firstAttribute="width" constant="50" id="6gB-jg-Ehg"/>
+                            </constraints>
+                            <state key="normal" image="Assets/Icons/GalleryButton.png">
+                                <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                            </state>
+                        </button>
+                    </subviews>
+                    <color key="backgroundColor" white="0.0" alpha="1" colorSpace="calibratedWhite"/>
+                    <constraints>
+                        <constraint firstAttribute="centerX" secondItem="FDr-hg-nDc" secondAttribute="centerX" id="D7i-fS-tad"/>
+                        <constraint firstAttribute="centerY" secondItem="c4Q-fB-mQc" secondAttribute="centerY" id="S6N-cx-cVO"/>
+                        <constraint firstItem="c4Q-fB-mQc" firstAttribute="leading" secondItem="80R-J1-Wxm" secondAttribute="leading" constant="20" id="VDU-fh-b7v"/>
+                        <constraint firstAttribute="centerY" secondItem="FDr-hg-nDc" secondAttribute="centerY" id="W6C-Qu-eLW"/>
+                        <constraint firstAttribute="height" constant="142" id="uDN-GU-l0T"/>
+                    </constraints>
+                </view>
             </subviews>
             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+            <constraints>
+                <constraint firstItem="80R-J1-Wxm" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" id="25K-LW-h4d"/>
+                <constraint firstAttribute="trailing" secondItem="80R-J1-Wxm" secondAttribute="trailing" id="86N-KE-QkX"/>
+                <constraint firstAttribute="bottom" secondItem="80R-J1-Wxm" secondAttribute="bottom" id="8ww-zf-zZW"/>
+            </constraints>
             <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina4"/>
             <connections>
-                <outlet property="dismissButton" destination="TS3-fi-Ux7" id="CxW-LL-i4V"/>
+                <outlet property="galleryButton" destination="c4Q-fB-mQc" id="JyU-Po-uqs"/>
                 <outlet property="takePhotoButton" destination="FDr-hg-nDc" id="2eh-0G-EFo"/>
             </connections>
         </view>
     </objects>
+    <resources>
+        <image name="Assets/Icons/CameraButton.png" width="16" height="16"/>
+        <image name="Assets/Icons/GalleryButton.png" width="16" height="16"/>
+    </resources>
 </document>
